Muchos now supports Accumulo 2.0.0 (#177)
* Muchos now supports Accumulo 1.* and 2.* versions
* Updates due to ACCUMULO-4490
* Removed generic_logger.properties as only generic_logger.xml is needed
* Renamed slaves file to tservers